cc_library(
    name = "indirect",
    hdrs = ["indirect.h"],
    copts = ["-Iexternal/indirect/"],
)

cc_test(
    name = "indirect_test",
    srcs = [
        "indirect_test.cpp",
    ],
    copts = ["-Iexternal/indirect/"],
    deps = [
        ":indirect",
        "@catch2",
    ],
)

cc_test(
    name = "pimpl_test",
    srcs = [
        "pimpl.cpp",
        "pimpl.h",
        "pimpl_test.cpp",
    ],
    copts = ["-Iexternal/indirect/"],
    defines = ["CATCH_CONFIG_MAIN"],
    deps = [
        ":indirect",
        "@catch2",
    ],
)
